unpackaged/main/default/objects/ChampifyIo__Champify_App_ID__c/ChampifyIo__Champify_App_ID__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Champify Settings</label>
</CustomObject>