unpackaged/main/default/objects/ChampifyIo__Champify_App_ID__c/fields/ChampifyIo__Account_Qualification_Enabled__c.field-meta.xml
<CustomField>
    <fullName>ChampifyIo__Account_Qualification_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Account Qualification</label>
    <type>Checkbox</type>
</CustomField>