unpackaged/main/default/objects/ChampifyIo__Champify_App_ID__c/fields/ChampifyIo__Account_Size_Minimum__c.field-meta.xml
<CustomField>
    <fullName>ChampifyIo__Account_Size_Minimum__c</fullName>
    <label>Account Size Minimum</label>
    <length>80</length>
    <type>Text</type>
</CustomField>