unpackaged/main/default/objects/ChampifyIo__Champify_App_ID__c/fields/ChampifyIo__Add_Batch_Invoke_Limit__c.field-meta.xml
<CustomField>
    <fullName>ChampifyIo__Add_Batch_Invoke_Limit__c</fullName>
    <defaultValue>40</defaultValue>
    <description>The maximum number of executions each time the add job is started. The batch add job runs on a daily schedule by default, so this acts as a daily maximum unless you manually run &quot;Add Now&quot; in addition to the scheduled job.</description>
    <label>Add Batch Invoke Limit</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>