unpackaged/main/default/objects/ChampifyIo__Champify_App_ID__c/fields/ChampifyIo__Add_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>ChampifyIo__Add_Batch_Size__c</fullName>
    <defaultValue>500</defaultValue>
    <label>Add Batch Size</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>