unpackaged/main/default/objects/ChampifyIo__Champify_App_ID__c/fields/ChampifyIo__App_Id__c.field-meta.xml
<CustomField>
    <fullName>ChampifyIo__App_Id__c</fullName>
    <externalId>true</externalId>
    <label>App Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>