unpackaged/main/default/objects/ChampifyIo__Champify_App_ID__c/fields/ChampifyIo__Champify_Disable_Lead_Conversion_Trigger__c.field-meta.xml
<CustomField>
    <fullName>ChampifyIo__Champify_Disable_Lead_Conversion_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Lead Conversion Trigger</label>
    <type>Checkbox</type>
</CustomField>