unpackaged/main/default/objects/ChampifyIo__Champify_App_ID__c/fields/ChampifyIo__champify_running_user__c.field-meta.xml
<CustomField>
    <fullName>ChampifyIo__champify_running_user__c</fullName>
    <label>Running User</label>
    <length>255</length>
    <type>Text</type>
</CustomField>