unpackaged/main/default/objects/ChampifyIo__Champify_App_ID__c/fields/ChampifyIo__Check_batch_Size__c.field-meta.xml
<CustomField>
    <fullName>ChampifyIo__Check_batch_Size__c</fullName>
    <label>Check Batch Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>