unpackaged/main/default/objects/ChampifyIo__Champify_App_ID__c/fields/ChampifyIo__ContactTier1ReportId__c.field-meta.xml
<CustomField>
    <fullName>ChampifyIo__ContactTier1ReportId__c</fullName>
    <label>Contact Tier 1 Report Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>