unpackaged/main/default/objects/ChampifyIo__Champify_App_ID__c/fields/ChampifyIo__ContactTier2ReportId__c.field-meta.xml
<CustomField>
    <fullName>ChampifyIo__ContactTier2ReportId__c</fullName>
    <label>Contact Tier 2 Report Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>