unpackaged/main/default/objects/ChampifyIo__Champify_App_ID__c/fields/ChampifyIo__Disable_Delete_Trigger__c.field-meta.xml
<CustomField>
    <fullName>ChampifyIo__Disable_Delete_Trigger__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Disable Contact Delete Trigger</label>
    <type>Checkbox</type>
</CustomField>