unpackaged/main/default/objects/ChampifyIo__Champify_App_ID__c/fields/ChampifyIo__Enable_Champify_Data_Platform__c.field-meta.xml
<CustomField>
    <fullName>ChampifyIo__Enable_Champify_Data_Platform__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enable the latest version of the Champify Data Platform.</description>
    <label>Enable Champify Data Platform</label>
    <type>Checkbox</type>
</CustomField>