unpackaged/main/default/objects/ChampifyIo__Champify_App_ID__c/fields/ChampifyIo__EnableChampifyEmailNotificationJob__c.field-meta.xml
<CustomField>
    <fullName>ChampifyIo__EnableChampifyEmailNotificationJob__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable job that sends email notifications every Monday at 9am local time</description>
    <label>Enable Champify Email Notification Job</label>
    <type>Checkbox</type>
</CustomField>