unpackaged/main/default/objects/ChampifyIo__Champify_App_ID__c/fields/ChampifyIo__EnableScheduledJobs__c.field-meta.xml
<CustomField>
    <fullName>ChampifyIo__EnableScheduledJobs__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable scheduled jobs for tracking job changes</description>
    <label>Enable Champify Scheduled Jobs</label>
    <type>Checkbox</type>
</CustomField>