unpackaged/main/default/objects/ChampifyIo__Champify_App_ID__c/fields/ChampifyIo__IsBatchApexErrorTriggerEnabled__c.field-meta.xml
<CustomField>
    <fullName>ChampifyIo__IsBatchApexErrorTriggerEnabled__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Enable Batch Apex Error Trigger</label>
    <type>Checkbox</type>
</CustomField>