unpackaged/main/default/objects/ChampifyIo__Champify_App_ID__c/fields/ChampifyIo__IsContactSlackTriggerEnabled__c.field-meta.xml
<CustomField>
    <fullName>ChampifyIo__IsContactSlackTriggerEnabled__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Enable Contact Slack Alert Trigger</label>
    <type>Checkbox</type>
</CustomField>