unpackaged/main/default/objects/ChampifyIo__Champify_App_ID__c/fields/ChampifyIo__IsLeadSlackTriggerEnabled__c.field-meta.xml
<CustomField>
    <fullName>ChampifyIo__IsLeadSlackTriggerEnabled__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Enable Lead Slack Alert Trigger</label>
    <type>Checkbox</type>
</CustomField>