unpackaged/main/default/objects/ChampifyIo__Champify_App_ID__c/fields/ChampifyIo__OppContactEventThreshold__c.field-meta.xml
<CustomField>
    <fullName>ChampifyIo__OppContactEventThreshold__c</fullName>
    <defaultValue>2</defaultValue>
    <label>OppContact Event Threshold</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>