unpackaged/main/default/objects/ChampifyIo__Champify_App_ID__c/fields/ChampifyIo__OppContactLookback__c.field-meta.xml
<CustomField>
    <fullName>ChampifyIo__OppContactLookback__c</fullName>
    <defaultValue>30</defaultValue>
    <description>Backfill lookback window in days used by the opp contact assignment job when running a manual backfill to assign contacts to opportunities greater than 30 days old. This does not affect the lookback window of the daily scheduled opp contact assignment job.</description>
    <label>OppContact Lookback</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>