unpackaged/main/default/objects/ChampifyIo__Champify_App_ID__c/fields/ChampifyIo__PersonEnrichmentInvokeLimit__c.field-meta.xml
<CustomField>
    <fullName>ChampifyIo__PersonEnrichmentInvokeLimit__c</fullName>
    <defaultValue>10</defaultValue>
    <description>The maximum number times to run the &quot;Fetch Job Changes&quot; job per day. Each time the job runs, it can fetch up to 1000 job changes. By default this job will run up to 10 times (giving you a maximum of 10,000 new job changes per day). Max value for this setting is 100</description>
    <label>Daily Fetch Job Change Executions</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>