unpackaged/main/default/objects/ChampifyIo__Champify_App_ID__c/fields/ChampifyIo__Query_Limit__c.field-meta.xml
<CustomField>
    <fullName>ChampifyIo__Query_Limit__c</fullName>
    <label>Query Limit</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>