unpackaged/main/default/objects/ChampifyIo__Champify_App_ID__c/fields/ChampifyIo__record_owner_Name__c.field-meta.xml
<CustomField>
    <fullName>ChampifyIo__record_owner_Name__c</fullName>
    <label>Record Owner</label>
    <length>120</length>
    <type>Text</type>
</CustomField>