unpackaged/main/default/objects/ChampifyIo__Champify_App_ID__c/fields/ChampifyIo__ShouldAddressUseCountryCode__c.field-meta.xml
<CustomField>
    <fullName>ChampifyIo__ShouldAddressUseCountryCode__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Use Country Code</label>
    <type>Checkbox</type>
</CustomField>