unpackaged/main/default/objects/ChampifyIo__Champify_App_ID__c/fields/ChampifyIo__ShouldAddressUseStateCode__c.field-meta.xml
<CustomField>
    <fullName>ChampifyIo__ShouldAddressUseStateCode__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Use State Code</label>
    <type>Checkbox</type>
</CustomField>