unpackaged/main/default/objects/ChampifyIo__Champify_App_ID__c/fields/ChampifyIo__Usage_Threshold__c.field-meta.xml
<CustomField>
    <fullName>ChampifyIo__Usage_Threshold__c</fullName>
    <defaultValue>0.95</defaultValue>
    <description>Champify will stop running jobs if any of DailyAsyncApexExecutions, DailyBulkApiBatches, or DailyApiRequests exceed this percentage of usage limits.</description>
    <label>Usage Threshold</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>